Fix layout issues on index.html

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,18 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 .container {
   display: flex;
   justify-content: center;
+  gap: 52px;
 }
 
 .container-item {
-  display: flex;
-  flex-direction: column;
+  max-width: 200px;
 }
+
 
 img {
   width: 100px;
@@ -20,7 +22,6 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
   margin-bottom: 32px;
 }
 
